Removing unused ressources + added croped images

--- a/index.html
+++ b/index.html
@@ -162,20 +162,9 @@
         <div class="row">
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW 1 -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image1.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image1-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image1.JPG"><em class="fa fa-search-plus"></em></a>
-                <h4 class="item-title">Stuttgart</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 filtr-item">
-            <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image2.JPG" alt="" />
-              <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image2.JPG"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image1.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
@@ -183,20 +172,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image3.jpg" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image2-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image3.jpg"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image2.jpg"><em
+                    class="fa fa-search-plus"></em></a>
+                <h4 class="item-title">Stuttgart</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 filtr-item">
+            <div class="item">
+              <img class="img-responsive height-300" src="images/portfolio/croped/image3-780x520.jpg" alt="" />
+              <div class="overlay">
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image3.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Avignon</h4>
               </div>
             </div>
           </div> <!-- END ROW 1 -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image4.jpg" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image4-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image4.jpg"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image4.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Vaison La Romaine</h4>
               </div>
@@ -204,30 +202,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image5.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image5-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image5.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image5.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Avignon</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image6.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image6-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image6.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image6.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Ludwigsbourg</h4>
               </div>
             </div>
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image7.jpg" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image7-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image7.jpg"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image7.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
@@ -235,30 +232,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image8.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image8-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image8.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image8.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Marseille</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image9.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image9-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image9.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image9.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Courthezon</h4>
               </div>
             </div>
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image10.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image10-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image10.JPG"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image10.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Avignon</h4>
               </div>
@@ -266,30 +262,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image11.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image11-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image11.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image11.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Tubingen</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image12.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image12-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image12.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image12.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Solitude - Stuttgart</h4>
               </div>
             </div>
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image13.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image13-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image13.JPG"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image13.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Marseille</h4>
               </div>
@@ -297,30 +292,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image14.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image14-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image14.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image14.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">barcelonnette</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image15.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image15-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image15.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image15.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
             </div>
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image16.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image16-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image16.JPG"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image16.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Avignon</h4>
               </div>
@@ -328,30 +322,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image17.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image17-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image17.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image17.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image18.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image18-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image18.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image18.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Jonquiere</h4>
               </div>
             </div>
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image19.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image19-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image19.JPG"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image19.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Vaison La Romaine</h4>
               </div>
@@ -359,30 +352,29 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image20.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image20-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image20.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image20.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Jonquiere</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image21.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image21-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image21.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image21.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
             </div>
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image22.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image22-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image22.JPG"><em
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image22.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Aubagne</h4>
               </div>
@@ -390,20 +382,20 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image23.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image23-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image23.JPG"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image23.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Avignon</h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image24.jpg" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/croped/image24-780x520.jpg" alt="" />
               <div class="overlay">
-                <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image24.jpg"><em class="fa fa-search-plus"></em></a>
+                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="images/portfolio/image24.jpg"><em
+                    class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
             </div>
@@ -432,7 +424,7 @@
       </ul>
       <div class="copyright">
         <p>
-          All Right Reserved &copy; 2022
+          All Right Reserved &copy; 2023
           <a href="#" target="_blank">Bruno Cazabat - Portfolio</a>
         </p>
       </div>
